Bug 508052 - Magnatune.com login doesn't seem to work
Summary: Magnatune.com login doesn't seem to work
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Services/Magnatune (other bugs)
Version First Reported In: 3.2.2
Platform: Debian testing Linux
: NOR normal
Target Milestone: kf5
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-08-09 14:57 UTC by Mario Fux
Modified: 2025-08-19 15:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mario Fux 2025-08-09 14:57:24 UTC
As talked about it on Matrix here the bug report.


SUMMARY
My Magnatune.com login doesn't seem to work as I still get the promo mentioning inbetween the songs.

STEPS TO REPRODUCE
1. Verified my old Magnatune.com life-time login in a web browser.
2. Added the credentials in Settings->Module->Magnatune
3. Even tried to restart Amarok after this.


OBSERVED RESULT
4. Promo intermezzos still there.

EXPECTED RESULT
Enjoying the Magnatune.com streams with promo intermezzos.

SOFTWARE/OS VERSIONS
KDE Plasma Version: 6.3.6
KDE Frameworks Version: 5.116 / 6.13
Qt Version: 6.8.2

ADDITIONAL INFORMATION
Comment 1 Tuomas Nurmi 2025-08-19 15:42:45 UTC
Git commit f51b38e65a597e64131d2345358ec0cebe938948 by Tuomas Nurmi.
Committed on 19/08/2025 at 15:42.
Pushed by nurmi into branch 'master'.

Change Magnatune to use tracks without ads where appropriate

Didn't manage to reproduce the original bug report, but this fix is more
far-reaching. Checked with Magnatune support that this is ok.

M  +1    -0    ChangeLog
M  +10   -10   src/services/magnatune/MagnatuneMeta.cpp

https://invent.kde.org/multimedia/amarok/-/commit/f51b38e65a597e64131d2345358ec0cebe938948