Change Magnatune to use tracks without ads where appropriate

Didn't manage to reproduce the original bug report, but this fix is more
far-reaching. Checked with Magnatune support that this is ok.

BUG: 508052